welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:20: error: Int does not take parameters
  else droite(); compteur();
                         ^